<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email">e-mail</string>
    <string name="hint_email">Enter your email address</string>
    <string name="password">Password</string>
    <string name="login">Login into account</string>
    <string name="login_new_account">Login with new Account</string>
    <string name="shoe_store_app">Shoe Store</string>
    <string name="welcomeSubTitle">Pick your shoes</string>
    <string name="letsGo">Let\'s Go</string>
    <string name="instruction_first">This app shows you a list of shoes</string>
    <string name="instruction_second">
        You can see the more information about it in the details screen.\n
        To do that select an item in the list.
    </string>
    <string name="listShoe">Shoe List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_details">More Details</string>
    <string name="logout">Logout</string>
    <string name="hint_shoe_name">Shoe Name</string>
    <string name="hint_manufactory_name">Manufactory</string>
    <string name="hint_shoe_size">Size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="welcome">"Welcome "</string>
    <string name="instructions">Instructions</string>
    <string name="shoes">Shoes</string>
    <string name="shoe_detail">Shoe Detail</string>
    <string name="logout_menu">Logout</string>
    <string name="shoe_listing_format"> Shoe Name : %s \n
                                        Company Name : %s \n
                                        Price : %s \n
                                        Description :%s</string>
    <string name="msg_shoe_save_success">Shoe Saved</string>
    <string name="login_title">Login</string>
</resources>
