<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvInstruction1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/instruction_first"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvInstruction2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/instruction_second"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:layout_gravity="center"
        android:text="@string/listShoe"
        android:textAlignment="center"
        android:textColor="@color/white" />
</LinearLayout>